--- a/style.css
+++ b/style.css
@@ -2,28 +2,36 @@ main {
     padding-left: 25%;
     padding-right: 25%;
     padding-bottom: 100px;
+    background-color: #e9e9e9;
+    padding-top: 20px;
 }
 
-img {
+#photo {
     display: block;
     margin: auto;
-    padding-bottom: 10px;
+    border: 2px solid grey;
 }
 
 h1 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 30px;
     text-align: center;
 }
 
-main > * {
-    
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-section {
-    
+header {
+    padding: 30px;
+    text-align: center;
+    background: #3a9986;
+    font-size: 30px;
 }
 
-code {
-    
+footer {
+    padding: 30px;
+    text-align: center;
+    background: #3a9986;
+    font-size: 10px;
 }
